tests/fsharp/typecheck/sigs/neg09.fsi

namespace N

val x : int
val f : int -> int

type C = class member M : int end
